Changed name to avoid collision with previous package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = 'mini-face'
+name = 'mini-face-oxidized'
 version = '0.0.1'
 description = 'An oxidized OpenFace ported to Python'
 readme = 'README.md'
