--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,14 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, windows-latest, macos-14, macos-15]
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+
+      - name: Install vcpkg
+        uses: lukka/run-vcpkg@v11.5
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
