--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,11 @@ jobs:
       - uses: actions/setup-python@v5
 
       - name: Install vcpkg
-        uses: lukka/run-vcpkg@v11.5
+        uses: johnwason/vcpkg-action@v6
+        with:
+          token: ${{ github.token }}
+          cache-key: ${{ matrix.config.os }}
+          github-binarycache: true
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
