--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,13 +4,19 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.config.os }}
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.config.os }}
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14, macos-15]
+        config:
+          - os: ubuntu-latest
+            vcpkg_triplet: x64-linux-release
+          - os: macos-15
+            vcpkg_triplet: x64-osx-release
+          - os: windows-latest
+            vcpkg_triplet: x64-windows-release
 
     steps:
       - uses: actions/checkout@v4
@@ -19,6 +25,7 @@ jobs:
       - name: Install vcpkg
         uses: johnwason/vcpkg-action@v6
         with:
+          triplet: ${{ matrix.config.vcpkg_triplet }}
           token: ${{ github.token }}
           cache-key: ${{ matrix.config.os }}
           github-binarycache: true
