--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install vcpkg
         uses: johnwason/vcpkg-action@v6
         with:
-          pkgs: opencv
+          pkgs: false
           triplet: ${{ matrix.config.vcpkg_triplet }}
           token: ${{ github.token }}
           cache-key: ${{ matrix.config.os }}
