--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Build and store wheels
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         config:
-          # - os: ubuntu-22.04
-          #   vcpkg_triplet: x64-linux-release
+          - os: ubuntu-22.04
+            vcpkg_triplet: x64-linux-release
           - os: macos-15
             vcpkg_triplet: x64-osx-release
           - os: windows-latest
@@ -26,6 +26,12 @@ jobs:
         uses: lukka/run-vcpkg@v11.5
         with:
           vcpkgDirectory: ${{ github.workspace }}/vcpkg
+
+      - name: Debug
+        run: |
+          whereis vcpkg
+          ls ${{ github.workspace }}/vcpkg
+          echo $PATH
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
