--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ requires = ['meson-python', 'pybind11']
 
 [tool.cibuildwheel.linux]
 # environment-pass = ["PATH"]
-environment = { PATH = "$PATH:/usr/local/bin/vcpkg" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
+environment = { PATH = "$PATH:/usr/local/bin/" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
