--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,7 @@ jobs:
 
       - name: Debug
         run: |
-          whereis vcpkg
-          echo "VCPKG_ROOT = $VCPKG_ROOT"
-          echo "vcpkg_root = $vcpkg_root"
-          echo $PATH
+          ls $VCPKG_ROOT
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
