Added `vcpkg` bootstrapping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ authors = [{ name = 'Jan Smółka', email = 'jp.smolka@gmail.com' }]
 build-backend = 'mesonpy'
 requires = ['meson-python', 'pybind11']
 
+# [tool.cibuildwheel]
+# environment = { PATH = "$PATH:/home/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg:/usr/local/bin" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
+
 [tool.cibuildwheel.linux]
 environment-pass = ["VCPKG_ROOT"]
-
-[tool.cibuildwheel]
-environment = { PATH = "$PATH:/home/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg:/usr/local/bin" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
+before-all = "sh $VCPKG_ROOT/bootstrap-vcpkg.sh"
