--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
 
-      - name: Install vcpkg
-        uses: lukka/run-vcpkg@v11.5
-        # with:
-        #   vcpkgDirectory: ${{ github.workspace }}/vcpkg
+      # - name: Install vcpkg
+      #   uses: lukka/run-vcpkg@v11.5
+      # with:
+      #   vcpkgDirectory: ${{ github.workspace }}/vcpkg
 
-      - name: Debug
-        run: |
-          ls $VCPKG_ROOT
+      # - name: Debug
+      #   run: |
+      #     ls $VCPKG_ROOT
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
