--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,4 @@ requires = ['meson-python', 'pybind11']
 # environment = { PATH = "$PATH:/home/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg:/usr/local/bin" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
 
 [tool.cibuildwheel]
-before-all = "ls; sh ./vcpkg/bootstrap-vcpkg.sh"
+before-all = "ls ./vpckg; sh ./vcpkg/bootstrap-vcpkg.sh"
