--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
 
-      # - name: Install vcpkg
-      #   uses: lukka/run-vcpkg@v11.5
+      - name: Install vcpkg
+        uses: lukka/run-vcpkg@v11.5
       # with:
       #   vcpkgDirectory: ${{ github.workspace }}/vcpkg
 
