--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,5 @@ authors = [{ name = 'Jan Smółka', email = 'jp.smolka@gmail.com' }]
 build-backend = 'mesonpy'
 requires = ['meson-python', 'pybind11']
 
-# [tool.cibuildwheel]
-# environment = { PATH = "$PATH:/home/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg:/usr/local/bin" } # This allows accessing `vcpkg` in the container created by `cibuildwheel`
-
 [tool.cibuildwheel]
-before-build = "git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; vcpkg --version"
-# before-all = "vcpkg --version"
+before-build = "git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; whereis vcpkg"
