Added separate C++ toolchain installation method for Linux

--- a/mini_face_oxidized/open_face_api/meson.build
+++ b/mini_face_oxidized/open_face_api/meson.build
@@ -1,6 +1,9 @@
 vcpkg = find_program(
     'vcpkg',
-    dirs: ['/Users/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg/', '/project/vcpkg'],
+    dirs: [
+        '/Users/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg/',
+        '/project/vcpkg'
+    ],
     required: true
 )
 
