--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         config:
-          - os: ubuntu-22.04
+          - os: ubuntu-latest
             vcpkg_triplet: x64-linux-release
           - os: macos-15
             vcpkg_triplet: x64-osx-release
@@ -22,20 +22,19 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
 
-      # - name: Install vcpkg
-      #   uses: lukka/run-vcpkg@v11.5
-      # with:
-      #   vcpkgDirectory: ${{ github.workspace }}/vcpkg
-
-      # - name: Debug
-      #   run: |
-      #     ls $VCPKG_ROOT
+      - name: Install vcpkg
+        uses: lukka/run-vcpkg@v11.5
+        # Separate vcpkg installation procedure on Linux
+        if: runner.os != 'Linux'
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.21.2
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_BEFORE_ALL: |
+            sh .gihub/scripts/install_cpp_toolchain.sh
 
       - name: Store wheels
         uses: actions/upload-artifact@v4
