Fixed Linux C++ toolchain setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ requires = ['meson-python', 'pybind11']
 # [tool.cibuildwheel]
 # before-build = "git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; whereis vcpkg"
 
-# [tool.cibuildwheel.linux]
+[tool.cibuildwheel.linux]
+before-all = "sh scripts/install_cpp_toolchain.sh"
 # before-build = "yum install -y zip; git clone https://github.com/microsoft/vcpkg.git; sh ./vcpkg/bootstrap-vcpkg.sh; export VCPKG_ROOT=$(pwd)/vcpkg; export PATH=$PATH:$(pwd)/vcpkg; whereis vcpkg"
