Overriden musllinux C++ toolchain installation procedure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,11 @@ requires = ['meson-python', 'pybind11']
 
 [tool.cibuildwheel.linux]
 archs = ['x86_64']
-before-all = "sh scripts/install_cpp_toolchain.sh"
+
+[[tool.cibuildwheel.overrides]]
+select = "*-manylinux*"
+before-all = "sh scripts/cpp_toolchain_setup/manylinux.sh"
+
+[[tool.cibuildwheel.overrides]]
+select = "*-musllinux*"
+before-all = "sh scripts/cpp_toolchain_setup/musllinux.sh"
