--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir dist
 
+      - name: Show obtained wheels
+        run: ls ./dist
+
       - name: Store wheels
         uses: actions/upload-artifact@v4
         with:
