Fixed CI and added test release workflow (#2)
* Changed `vcpkg` job

* Added `vcpkg` architecture triplets

* Added packages to install by `vcpkg`

* Turned installing packages off

* Restored previous `vcpkg` job

* Added explicit `vcpkg` directory

* Bumped `vcpkg` action version

* Changed Ubuntu version

* Removed Ubuntu variant

* Added some debug printing

* Removed Windows variant

* Added Linux environment inheritance

* Added passing `vcpkg` path to `buildciwheel`

* Added more debug

* Added another path to vcpkg

* Added fallbacks in `vcpkg` search

* Enhanced debug

* Inherit `VCPKG_ROOT` on Linux

* Delete Meson fallbacks

* Added even more debug

* Changed `cibuildwheel` environment a bit

* Fixed Meson `find_program`s

* Fixed Meson `find_program`s

* Added VCPKG_ROOT as a Meson fallback

* Deleted custom vcpkg directory

* Deleted Meson fallback

* Modified inherited path

* Changed debug

* Added `vcpkg` bootstrapping

* Added `vcpkg` submodule

* Added `vcpkg` submodule

* Modified before-all

* Added some debug

* Added some debug

* Added some debug

* Added `vcpkg` submodule init

* Added `vcpkg` repo cloning

* Added exports to before-all

* Added debug to before-all

* Restored `vcpkg` action and added debug to before-all

* Added `vcpkg` bootrstrapping to before-build

* Added `vcpkg` version debug

* Added `vcpkg` location debug info

* Changed `vcpkg` search dir

* Changed `vcpkg` search dir

* Added separate before-build for Linux

* Added separate before-build for Linux

* Added separate before-build for Linux

* Added separate before-build for Linux

* Simplified Linux before-all

* Added Linux container `vcpkg` location to Meson search list

* Added Linux container `vcpkg` location to Meson search list

* Added separate C++ toolchain installation method for Linux

* Fixed Linux C++ toolchain setup

* Removed Ninja from Linux depen

--- a/mini_face_oxidized/open_face_api/meson.build
+++ b/mini_face_oxidized/open_face_api/meson.build
@@ -1,4 +1,11 @@
-vcpkg = find_program('vcpkg', required : true)
+vcpkg = find_program(
+    'vcpkg',
+    dirs: [
+        '/Users/runner/work/mini-face-meson-test/mini-face-meson-test/vcpkg/',
+        '/project/vcpkg'
+    ],
+    required: true
+)
 
 run_command(
     vcpkg,
