--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Build and store wheels
 
-on: [push, pull_request]
+on: [pull_request, workflow_call]
 
 jobs:
   build:
@@ -10,51 +10,31 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14, macos-15]
+        os: [ubuntu-latest, macos-15]
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
       - name: Install vcpkg
         uses: lukka/run-vcpkg@v11.5
+        # Separate vcpkg installation procedure on Linux
+        if: runner.os != 'Linux'
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.21.2
+        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         run: python -m cibuildwheel --output-dir dist
 
+      - name: Show obtained wheels and some debug info
+        run: |
+          ls ./dist
+
       - name: Store wheels
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: distributions
+          name: wheels
           path: ./dist/*.whl
-
-  publish:
-    name: >-
-      Publish Python 🐍 distribution 📦 to PyPI
-
-    if: startsWith(github.ref, 'refs/tags/')
-
-    needs:
-      - build
-
-    runs-on: ubuntu-latest
-
-    environment:
-      name: pypi
-      url: https://test.pypi.org/p/mini-face-oxidized
-
-    permissions:
-      id-token: write
-
-    steps:
-      - name: Download all the wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: python-package-distributions
-          path: dist/
-
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
