Added copy of `build` job to `test_release` workflow

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -26,6 +26,43 @@ jobs:
           file_path: "mini_face_oxidized/open_face_api/vcpkg.json"
           prop_path: "version"
 
+  # TODO: think about reusing this job instead of copying
+  build:
+    name: Build wheels on ${{ matrix.os }}
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-15]
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install vcpkg
+        uses: lukka/run-vcpkg@v11.5
+        # Separate vcpkg installation procedure on Linux
+        if: runner.os != 'Linux'
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir dist
+
+      - name: Show obtained wheels and some debug info
+        run: |
+          ls ./dist
+
+      - name: Store wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: ./dist/*.whl
+
   publish:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
